--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --colors --watch --hot --inline"
+    "dev": "webpack-dev-server --progress --colors --watch --hot --inline --devtool source-map"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/Mrmaxmeier/BombSquad-Community-Mod-Manager#readme",
   "dependencies": {
     "babel": "^6.1.18",
+    "babel-core": "^6.1.21",
+    "babel-loader": "^5.4.0",
+    "babel-preset-es2015": "^6.1.18",
     "history": "^1.13.1",
-    "jsx-loader": "^0.13.2",
     "material-ui": "^0.13.2",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
