--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "dependencies": {
     "babel": "^6.1.18",
     "babel-core": "^6.1.21",
-    "babel-loader": "^5.4.0",
+    "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "history": "^1.13.1",
     "material-ui": "^0.13.2",
     "react": "^0.14.2",
