--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "webpack -p",
     "dev": "webpack-dev-server --progress --colors --watch --hot --inline --devtool source-map"
   },
   "repository": {
@@ -19,22 +19,22 @@
   "homepage": "https://github.com/Mrmaxmeier/BombSquad-Community-Mod-Manager#readme",
   "dependencies": {
     "babel": "^6.1.18",
-    "babel-core": "^6.1.21",
-    "babel-loader": "^6.1.0",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "history": "^1.13.1",
-    "material-ui": "^0.13.2",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "material-ui": "^0.13.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
     "react-tap-event-plugin": "^0.2.1",
     "underscore": "^1.8.3",
-    "webpack": "^1.12.6"
+    "webpack": "^1.12.8"
   },
   "devDependencies": {
     "express": "^4.13.3",
-    "webpack-dev-server": "^1.12.1",
+    "webpack-dev-server": "^1.14.0",
     "zombie": "^4.2.1"
   }
 }
