Renabe bsPowerup to snowyPowerup, utilize monkey patching (#25)

--- a/mods/snowyPowerup.json
+++ b/mods/snowyPowerup.json
@@ -1,6 +1,6 @@
 {
   "name": "Modified bsPowerup.py",
   "author": "joshville79",
-  "category": "utilities"
+  "category": "libraries",
   "requires": ["BuddyBunny", "SnoBallz"]
 }
