--- a/mods/SnowBallFight.json
+++ b/mods/SnowBallFight.json
@@ -1,6 +1,6 @@
 {
   "name": "Snowball Fight (requires SnoBallz.py)",
   "author": "joshville79",
-  "category": "minigames"
-  "requires": "SnoBallz"
+  "category": "minigames",
+  "requires": ["SnoBallz"]
 }
