Added 4 new powerups
Added 4 new powerups:
i) Headache Bomb
ii) 3D flying powerup
iii)  Motion Tweaker
iv) Anti Gravity Bomb

--- a/mods/snowyPowerup.json
+++ b/mods/snowyPowerup.json
@@ -2,5 +2,5 @@
   "name": "Modified bsPowerup.py",
   "author": "joshville79",
   "category": "libraries",
-  "requires": ["BuddyBunny", "SnoBallz", "Portal"]
+  "requires": ["BuddyBunny", "SnoBallz", "Portal", "newSpaz", "newBomb"]
 }
